tests/paczka1/fuzzy1/22121366.err
Error in line 4: IaTZTrL A807 52,7
Error in line 8: S83 A807 47,2
Error in line 16: GX8447rHs A393 19,4
Error in line 30: IaTZTrL A807 53,8
Error in line 28: qekMV A807 82,3
Error in line 32: IaTZTrL A393 88,5
